--- a/index.html
+++ b/index.html
@@ -3,208 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página - Danny Prowls</title>
-    <!-- Importar fuente con serifa de Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Importar Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Danny Prowls - Página Oficial</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: 'Merriweather', serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            transition: background-color 0.3s ease, color 0.3s ease;
+            font-family: 'Georgia', serif;
+            background-color: var(--background);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
         }
-
-        header {
-            background-color: #fff;
-            padding: 20px;
+        h1, h2 {
             text-align: center;
-            border-bottom: 1px solid #ddd;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            transition: background-color 0.3s ease;
         }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
+        .header {
+            background-color: #333;
+            padding: 10px;
+            color: white;
+            text-align: center;
         }
-
-        header p {
-            margin-top: 5px;
+        .header h1 {
+            font-size: 3em;
+        }
+        .header p {
             font-size: 1.2em;
+            font-family: 'Courier New', Courier, monospace;
             font-style: italic;
-            font-weight: 400;
         }
-
-        nav a {
-            color: #333;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2em;
-            transition: color 0.3s ease;
-        }
-
-        nav a:hover {
-            color: #0077b5;
-        }
-
         .content {
-            padding: 40px;
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: justify;
-            line-height: 1.8;
-            flex-grow: 1;
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeIn 1s ease forwards;
+            margin: 20px;
         }
-
-        .content h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        .card {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-        }
-
         footer {
             background-color: #333;
-            color: #fff;
+            color: white;
+            padding: 10px;
             text-align: center;
-            padding: 20px;
-            position: relative;
-            width: 100%;
-            transition: background-color 0.3s ease;
         }
-
-        footer .social-links a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.5em;
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
-
-        footer .social-links a:hover {
-            color: #0077b5;
-        }
-
-        /* Animación al hacer scroll */
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Modo oscuro */
-        .dark-mode {
-            background-color: #121212;
-            color: #e0e0e0;
-        }
-
-        .dark-mode header {
-            background-color: #1e1e1e;
-        }
-
-        .dark-mode footer {
-            background-color: #1e1e1e;
-        }
-
-        .toggle-button {
+        .dark-mode-toggle {
             position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #0077b5;
+            bottom: 10px;
+            right: 10px;
+            padding: 10px;
+            background-color: #333;
             color: white;
             border: none;
-            padding: 10px 20px;
-            cursor: pointer;
             border-radius: 5px;
-            font-size: 1em;
+            cursor: pointer;
         }
-
-        .toggle-button:hover {
-            background-color: #005f85;
+        :root {
+            --background: #ffffff;
+            --text-color: #000000;
         }
-
+        .dark-mode :root {
+            --background: #121212;
+            --text-color: #ffffff;
+        }
     </style>
 </head>
 <body>
+    <div class="header">
+        <h1>Danny Prowls</h1>
+        <p>"Yo no tengo madera de poeta, solo llevo un par de astillas en el alma"</p>
+    </div>
+    <div class="content">
+        <section id="sobre-mi">
+            <h2>Sobre mí</h2>
+            <p>Danny Prowls es un autor que ha ganado reconocimiento por sus "instantáneas literarias", aforismos que capturan momentos de la vida con una fidelidad única. Su enfoque es retratar lo real y elevarlo a través de una potencia poética que resalta las emociones humanas. Prowls estudió enfermería y se formó en anatomía, pero su interés por la filosofía y la muerte lo ha llevado a escribir sobre el impacto emocional de la vida y la pérdida. En 2020, ganó el Premio de Innovación Educativa con su ensayo "Hacia una ciencia de la felicidad" y publicó su primer libro, *Si yo muriera esta noche*. Actualmente, trabaja en su próxima obra.</p>
+        </section>
 
-<header>
-    <h1>Danny Prowls</h1>
-    <p>Yo no tengo madera de poeta, solo llevo un par de astillas en el alma</p>
-    <nav>
-        <a href="#about">Sobre mí</a>
-        <a href="#works">Mis libros</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contacto</a>
-    </nav>
-</header>
-
-<div class="content">
-    <h2 id="about">Sobre mí</h2>
-    <div class="card">
-        <p>Bienvenidos a mi página personal. Soy Danny Prowls, escritor y apasionado de las letras. Aquí encontrarás información sobre mi obra, mis pensamientos y mis próximos proyectos literarios.</p>
+        <section id="mis-libros">
+            <h2>Mis libros</h2>
+            <ul>
+                <li><strong>Si yo muriera esta noche</strong> (2020) - Una exploración profunda de la vida y la muerte, que aborda el dolor de la pérdida y la búsqueda del sentido.</li>
+                <li><strong>Una Navidad Imposible</strong> (2021) - Colaboración con otros autores, en la que se tratan temas de amor, esperanza y melancolía en tiempos difíciles.</li>
+            </ul>
+        </section>
     </div>
 
-    <h2 id="works">Mis libros</h2>
-    <div class="card">
-        <p>Aquí puedes encontrar información sobre los libros que he publicado y mis próximos lanzamientos. Cada obra ha sido escrita desde el corazón, buscando conectar con las emociones más profundas de los lectores.</p>
-    </div>
+    <footer>
+        <div class="social-links">
+            <a href="https://www.facebook.com/dannyprowls">Facebook</a>
+            <a href="https://www.instagram.com/dannyprowls">Instagram</a>
+            <a href="https://www.twitter.com/dannyprowls">Twitter</a>
+        </div>
+        <p>&copy; 2024 Danny Prowls. Todos los derechos reservados.</p>
+    </footer>
 
-    <h2 id="blog">Blog</h2>
-    <div class="card">
-        <p>Reflexiones sobre la vida, la poesía y todo lo que me inspira a escribir. Visita mi blog para leer mis pensamientos más recientes.</p>
-    </div>
+    <button class="dark-mode-toggle" onclick="toggleDarkMode()">Cambiar a modo oscuro</button>
 
-    <h2 id="contact">Contacto</h2>
-    <div class="card">
-        <p>Si deseas ponerte en contacto conmigo, puedes enviarme un mensaje a través de mis redes sociales o dejarme un correo electrónico.</p>
-    </div>
-</div>
-
-<footer>
-    <p>Sigue mis redes sociales</p>
-    <div class="social-links">
-        <a href="https://www.facebook.com/tuusuario" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/tuusuario" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.twitter.com/tuusuario" target="_blank"><i class="fab fa-twitter"></i></a>
-    </div>
-    <p>&copy; 2024 Danny Prowls. Todos los derechos reservados.</p>
-</footer>
-
-<!-- Botón para cambiar a modo oscuro -->
-<button class="toggle-button" onclick="toggleDarkMode()">Modo Oscuro</button>
-
-<script>
-    function toggleDarkMode() {
-        document.body.classList.toggle('dark-mode');
-    }
-</script>
-
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+    </script>
 </body>
 </html>
