--- a/index.html
+++ b/index.html
@@ -190,9 +190,8 @@
 <footer>
     <p>Sigue mis redes sociales</p>
     <div class="social-links">
-        <a href="https://www.facebook.com/tuusuario" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/tuusuario" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.twitter.com/tuusuario" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/MrDannyProwls" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/escritosdannyprowls" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
     <p>&copy; 2024 Danny Prowls. Todos los derechos reservados.</p>
 </footer>
