--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         header p {
             margin-top: 5px;
-            font-size: 1.2em;
+            font-size: 1em; /* Reducir el tamaño de la fuente del lema */
             font-style: italic;
             font-weight: 400;
         }
@@ -144,6 +144,7 @@
             cursor: pointer;
             border-radius: 5px;
             font-size: 1em;
+            z-index: 1001; /* Asegura que esté encima del contenido */
         }
 
         .toggle-button:hover {
@@ -190,8 +191,9 @@
 <footer>
     <p>Sigue mis redes sociales</p>
     <div class="social-links">
-        <a href="https://www.facebook.com/MrDannyProwls" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/escritosdannyprowls" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/tuusuario" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/tuusuario" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.twitter.com/tuusuario" target="_blank"><i class="fab fa-twitter"></i></a>
     </div>
     <p>&copy; 2024 Danny Prowls. Todos los derechos reservados.</p>
 </footer>
