--- a/index.html
+++ b/index.html
@@ -136,4 +136,31 @@
 
     <h2 id="works">Mis libros</h2>
     <div class="card">
-        <h3>Si
+        <h3>Si yo muriera esta noche (2020)</h3>
+        <p>Mi primer libro, <em>Si yo muriera esta noche</em>, es una reflexión poética sobre la vida, el dolor y la fragilidad humana. Escribí esta obra con la intención de capturar emociones intensas, ofreciendo una visión íntima sobre la impermanencia y las preguntas que surgen ante la posibilidad de la muerte. El libro invita a los lectores a confrontar sus propios miedos y anhelos, y a explorar lo que significa estar vivo cuando enfrentamos la inminencia de lo inevitable.</p>
+        <!-- Aquí puedes incluir una imagen de la portada del libro -->
+        <img src="URL_DE_TU_IMAGEN_DE_PORTADA" alt="Portada de Si yo muriera esta noche" class="book-cover">
+    </div>
+
+    <h2 id="blog">Blog</h2>
+    <div class="card">
+        <p>Reflexiones sobre la vida, la poesía y todo lo que me inspira a escribir. Visita mi blog para leer mis pensamientos más recientes.</p>
+    </div>
+
+    <h2 id="contact">Contacto</h2>
+    <div class="card">
+        <p>Si deseas ponerte en contacto conmigo, puedes enviarme un mensaje a través de mis redes sociales o dejarme un correo electrónico.</p>
+    </div>
+</div>
+
+<footer>
+    <p>Sigue mis redes sociales</p>
+    <div class="social-links">
+        <a href="https://www.facebook.com/MrDannyProwls" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/escritosdannyprowls" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+    <p>&copy; 2024 Danny Prowls. Todos los derechos reservados.</p>
+</footer>
+
+</body>
+</html>
